--- a/业务/面试别人的题.md
+++ b/业务/面试别人的题.md
@@ -4,7 +4,7 @@
 3. 性能好
 4. 抽象能力较好，能够适用更多的场景
 
-1. 数组去重
+demo: 数组去重
   1) [1, 2, 3, 4]
   2) 如果数组里面是对象 [ {id: 1, name: 'a'}, {id: 2, name: 'b'}, {id: 3, name: 'c'}, {id: 2, name: 'd'}, {id: 3, name: 'd'}], 如何去重
   3）如果判定重复的key不固定怎么处理？如果需要多个字段共同决定是否重复怎么处理
