--- a/一些解决方案/换肤方案.md
+++ b/一些解决方案/换肤方案.md
@@ -155,4 +155,4 @@ context.keys().forEach((r) => {
 
 [通过一个算法来简化你的 css](https://segmentfault.com/a/1190000022950774)
 
-[css-loader
+[css-loader](https://webpack.docschina.org/loaders/css-loader/)
